[package]
name = "autoincrement_derive"
version = "1.0.0"
edition = "2018"
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features=["derive"] }
quote = "1"

[lib]
proc-macro = true
